--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 paginate = 10
 
 # Enable comments by entering your Disqus shortname
-disqusShortname = "sanderwvanderlaan"
+disqusShortname = "swvanderlaan-github"
 
 # Enable analytics by entering your Google Analytics tracking ID
 googleAnalytics = ""
