Committing the (updated) source files.

--- a/config.toml
+++ b/config.toml
@@ -34,7 +34,7 @@ defaultContentLanguageInSubdir = false
 
   # Your details.
   name = "Sander W. van der Laan"
-  role = "Junior PostDoc Experimental Cardiology"
+  role = "PostDoc Circulatory Health Program"
   organization = "University Medical Center Utrecht, University of Utrecht, the Netherlands"
   organization_url = "https://www.umcutrecht.nl"
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
